manifests/metrics/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
